src/objects/can__c.object
<CustomObject>
    <description>This object is a master/detail to a Case, and stores information about a group of articles that have been attached to the case (represented in a master/detail relationship to the Case Article Notification Line object), and that need to be communicated to the Case Contact.</description>
    <fields>
        <fullName>Support_Provider_Contact_Email_Id__c</fullName>
        <label>Support Provider Contact Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>canArticleLinks__c</fullName>
        <label>Article Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>canCaseContactEmail__c</fullName>
        <label>Case Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>canCaseContactFirstName__c</fullName>
        <label>Case Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canCaseContactLastName__c</fullName>
        <label>Case Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canCaseNumber__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Article Notifications</relationshipLabel>
        <relationshipName>caseArticleNotifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>canDateTimeClosed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>canDateTimeOpened__c</fullName>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>canStatus__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>DRAFT-10: Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-10: Waiting to notify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-20: No case contact email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-10: Notified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-20: Support provider notified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Article Notification</label>
    <nameField>
        <displayFormat>CAN-{000000}</displayFormat>
        <label>Case Article Notification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Article Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>